editing research_agent_poc

--- a/core/agents/research_agent_poc.ipynb
+++ b/core/agents/research_agent_poc.ipynb
@@ -17,6 +17,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOllama(\n",
+    "    model=MODEL, \n",
+    "    temperature=TEMPERATURE,\n",
+    "    # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
+    "    ).bind_tools(tools)\n",
+    "\n",
+    "\n",
+    "class State(TypedDict):\n",
+    "    messages: Annotated[list[BaseMessage], add_messages]\n",
+    "    claim: str\n",
+    "    evidence: list[dict]  # {'name': tool name, 'args': {kwargs}, 'result': str}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -92,6 +111,61 @@
     "add = Tool(name = \"add\", func = add, description=\"Add `a` and `b`\")\n",
     "divide = Tool(name = \"devide\", func =divide, description=\"Divide `a` and `b`\")\n",
     "tools = [tool,add,divide]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Agent result: {'input': 'Can you get information about a news article at https://example.com/news-article?', 'output': ''}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname('__file__'), '../..')))\n",
+    "from core.agents.tools.remote_tool import remote_tool_func\n",
+    "from langchain.agents import Tool\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_ollama import ChatOllama\n",
+    "from langchain.agents import AgentExecutor, create_openai_tools_agent\n",
+    "\n",
+    "tool = Tool(\n",
+    "    name=\"NewsAPI\",\n",
+    "    func=remote_tool_func,\n",
+    "    description=\"Get information about a news article from a URL\"\n",
+    ")\n",
+    "\n",
+    "tools = [tool]\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a helpful assistant. Use the tools provided to answer the user's question.\"),\n",
+    "    (\"human\", \"{input}\"),\n",
+    "    (\"ai\", \"{agent_scratchpad}\")\n",
+    "])\n",
+    "\n",
+    "model = ChatOllama(model=\"mistral-nemo\", temperature=0)\n",
+    "\n",
+    "agent = create_openai_tools_agent(model, tools, prompt)\n",
+    "\n",
+    "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)\n",
+    "\n",
+    "result = agent_executor.invoke({\"input\": \"Can you get information about a news article at https://example.com/news-article?\"})\n",
+    "\n",
+    "print(f\"Agent result: {result}\")"
    ]
   },
   {
