--- a/core/agents/research_agent_poc.ipynb
+++ b/core/agents/research_agent_poc.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY:  ········\n"
+     ]
+    }
+   ],
    "source": [
     "import os, getpass\n",
     "\n",
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,10 +133,19 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `NewsAPI` with `https://example.com/news-article`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m{'title': 'News Article', 'author': 'John Doe', 'published_date': '2025-03-22', 'content': 'This is an example news article content.'}\u001b[0m\u001b[32;1m\u001b[1;3mI have retrieved information about the news article for you:\n",
+      "\n",
+      "- **Title:** News Article\n",
+      "- **Author:** John Doe\n",
+      "- **Published Date:** March 22, 2025\n",
+      "- **Content:** This is an example news article content.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Agent result: {'input': 'Can you get information about a news article at https://example.com/news-article?', 'output': ''}\n"
+      "Agent result: {'input': 'Can you get information about a news article at https://example.com/news-article?', 'output': 'I have retrieved information about the news article for you:\\n\\n- **Title:** News Article\\n- **Author:** John Doe\\n- **Published Date:** March 22, 2025\\n- **Content:** This is an example news article content.'}\n"
      ]
     }
    ],
@@ -157,8 +174,12 @@
     "    (\"ai\", \"{agent_scratchpad}\")\n",
     "])\n",
     "\n",
-    "model = ChatOllama(model=\"mistral-nemo\", temperature=0)\n",
-    "\n",
+    "# model = ChatOllama(model=\"mistral-nemo\", temperature=0)\n",
+    "model  = ChatOpenAI(\n",
+    "    model=MODEL, \n",
+    "    temperature=TEMPERATURE,\n",
+    "    # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
+    "    )\n",
     "agent = create_openai_tools_agent(model, tools, prompt)\n",
     "\n",
     "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)\n",
