--- a/core/agents/research_agent_poc.ipynb
+++ b/core/agents/research_agent_poc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +185,95 @@
     "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)\n",
     "\n",
     "result = agent_executor.invoke({\"input\": \"Can you get information about a news article at https://example.com/news-article?\"})\n",
+    "\n",
+    "print(f\"Agent result: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `fetch_remote_tool` with `123`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'name': 'temperature_api', 'url': 'https://temperature/api?', 'params': {'key': 'whatever'}}, {'name': 'news', 'url': 'https://nytimes/api', 'params': 'whatever'}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `construct_url` with `{\"name\": \"temperature_api\", \"url\": \"https://temperature/api?\", \"params\": {\"key\": \"whatever\"}}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[38;5;200m\u001b[1;3mhttps://temperature/api?key=whatever\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `ping_remote_api` with `https://temperature/api?key=whatever`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m{'temperature': 20}\u001b[0m\u001b[32;1m\u001b[1;3mThe current temperature is 20°C.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Agent result: {'input': 'you have user_id 123. what is the temperature?', 'output': 'The current temperature is 20°C.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname('__file__'), '../..')))\n",
+    "from core.agents.tools.remote_tool import remote_tool_func, fetch_tools, remote_api_call,construct_url\n",
+    "from langchain.agents import Tool\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_ollama import ChatOllama\n",
+    "from langchain.agents import AgentExecutor, create_openai_tools_agent\n",
+    "\n",
+    "fetch_tool = Tool(\n",
+    "    name=\"fetch_remote_tool\",\n",
+    "    func=fetch_tools,\n",
+    "    description=\"Fetch user registered remote tools by user id. Returns a list of tool dictionaries.\"\n",
+    ")\n",
+    "\n",
+    "ping_tool = Tool(\n",
+    "    name=\"ping_remote_api\",\n",
+    "    func=remote_api_call,\n",
+    "    description=\"Ping a constructed API URL and return the response.\"\n",
+    ")\n",
+    "\n",
+    "construct_url_tool = Tool(\n",
+    "    name=\"construct_url\",\n",
+    "    func=construct_url,\n",
+    "    description=\"Construct a full URL from a tool dictionary. Input must be a dictionary in the format {'name': string, 'url': string, 'params': dict}.\"\n",
+    ")\n",
+    "\n",
+    "tools = [fetch_tool, ping_tool,construct_url_tool]\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \n",
+    "     \"You are a smart API assistant. \"\n",
+    "     \"1. First, use 'fetch_remote_tool' with user_id to retrieve a list of tool dictionaries. \"\n",
+    "     \"2. Then, select the correct tool (e.g., 'temperature_api'). \"\n",
+    "     \"3. Pass the **entire tool dictionary** (not just the URL) to 'construct_url' to generate a full URL. \"\n",
+    "     \"4. Finally, use 'ping_remote_api' with the fully constructed URL to get the API response. \"\n",
+    "     \"Be sure to pass dictionaries, not strings, when constructing URLs.\"),\n",
+    "    (\"human\", \"{input}\"),\n",
+    "    (\"ai\", \"{agent_scratchpad}\")\n",
+    "])\n",
+    "\n",
+    "# model = ChatOllama(model=\"mistral-nemo\", temperature=0)\n",
+    "model  = ChatOpenAI(\n",
+    "    model=MODEL, \n",
+    "    temperature=TEMPERATURE,\n",
+    "    # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
+    "    )\n",
+    "agent = create_openai_tools_agent(model, tools, prompt)\n",
+    "\n",
+    "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)\n",
+    "\n",
+    "result = agent_executor.invoke({\"input\": \"you have user_id 123. what is the temperature?\"})\n",
     "\n",
     "print(f\"Agent result: {result}\")"
    ]
@@ -367,7 +456,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
